crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__simple_3_remove_remaining_segments_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: "filtered_batch.filter_columns_by(|f|\nf.metadata().get(\"rerun:index_kind\").is_none()).unwrap().format_snapshot(false)"
---
┌──────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
└──────────────────┴───────────────────┴──────────────────┘
