crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__simple_3_remove_remaining_segments_segments_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: filter_out_index_ranges(batch.clone()).format_schema_snapshot()
---
dalaran_last_updated_at: non-null Timestamp(ns)
dalaran_layer_names: non-null List(non-null Utf8)
dalaran_num_chunks: non-null UInt64
dalaran_segment_id: non-null Utf8
dalaran_size_bytes: non-null UInt64
dalaran_storage_urls: non-null List(non-null Utf8)
