crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__simple_4_reregister_all_manifest_data.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬───────────────────────────┐
│ dalaran_layer_name ┆ dalaran_segment_id ┆ dalaran_layer_type ┆ dalaran_num_chunks ┆ dalaran_schema_sha256                      ┆ dalaran_registration_status │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪═══════════════════════════╡
│ base             ┆ my_segment_id1   ┆ rrd              ┆ 4                ┆ d993555a9bb588ccebb86ba420107954c37d657… ┆ done                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id2   ┆ rrd              ┆ 2                ┆ 7445711ea6547499a41035b6572d7adb6021f9e… ┆ done                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_segment_id3   ┆ rrd              ┆ 6                ┆ a2844c9fa0464c154088a30c919663988c7a332… ┆ done                      │
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴───────────────────────────┘
